@@ -4,6 +4,7 @@ cm4all-beng-proxy (0.8.7) unstable; urgency=low
   * http-client: send "Expect: 100-continue"
   * response, widget-http: apply istream_pipe to filter input
   * proxy-handler: apply istream_pipe to request body
+  * istream-ajp-body: send larger request body packets
 
  --
 
